# grug

./: .gitignore  Cargo.toml  LICENSE  README.md
demo/: cli.tape  demo.tape  setup.sh
rc/: grug.kak
src/: errors.rs  expand.rs  grepline.rs  hunk.rs  main.rs  preview.rs  write.rs
tests/: roundtrip.rs
